--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tosource": "~0.1.1",
     "jit-grunt": "~0.4.1",
     "requirejs": "~2.1.13",
-    "ractive": "~0.4.0"
+    "ractive": "~0.4.0",
+    "rcu": "~0.1.5"
   }
 }
