Use grunt-contrib-uglify

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-requirejs": "~0.4.3",
     "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-concat": "~0.4.0",
+	"grunt-contrib-uglify": "0.5.0",
     "amdclean": "~1.5.0",
     "grunt-jsbeautifier": "~0.2.6",
     "grunt-contrib-qunit": "~0.4.0",
