Fix main file location in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rvc",
   "version": "0.3.2",
   "description": "RequireJS plugin to load and optimise Ractive components",
-  "main": "rvc.js",
+  "main": "dist/rvc.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/ractivejs/rvc.git"
