--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rvc",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "RequireJS plugin to load and optimise Ractive components",
   "main": "dist/rvc.js",
   "repository": {
@@ -18,12 +18,13 @@
   "author": "Rich Harris",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^4.7.12",
     "es6-promise": "^2.0.1",
+    "eslint": "^1.5.1",
     "gobble": "^0.7.8",
     "gobble-babel": "^4.0.1",
     "gobble-cli": "^0.3.5",
-    "gobble-esperanto-bundle": "^0.1.7",
+    "gobble-rollup-babel": "^0.1.2",
+    "mocha": "^2.3.3",
     "rcu": "^0.4.2",
     "requirejs": "^2.1.16",
     "resolve": "^1.1.6",
@@ -33,6 +34,9 @@
     "ractive": "^0.7.0"
   },
   "scripts": {
-    "build": "gobble build -f dist"
+    "build": "gobble build -f dist",
+    "test": "mocha",
+    "pretest": "npm run build",
+    "prepublish": "npm test"
   }
 }
